--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -22,6 +22,8 @@ jobs:
 #         python-version: 3.7
     - name: 🔧 Set up Java   (Java 1.8)
       uses: olafurpg/setup-scala@v6
+      with:
+        java-version: openjdk@1.11
     - name: 🔧 Set up Pipenv (Python 3.7)
       uses: peaceiris/actions-pipenv@3.7
       with:
