--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,11 +16,11 @@ jobs:
     steps:
     - name: 📥 Checkout
       uses: actions/checkout@v2
-#     - name: 🔧 Set up Python 3.7
-#       uses: actions/setup-python@v1
-#       with:
-#         python-version: 3.7
-    - name: 🔧 Set up Java   (Java 1.8)
+    - name: 🔧 Set up Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    - name: 🔧 Set up Java   (Java 1.11)
       uses: olafurpg/setup-scala@v6
       with:
         java-version: openjdk@1.11
