--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -4,6 +4,7 @@ name: Python application
 on:
   push:
     branches: [ master ]
+    
   pull_request:
     branches: [ master ]
 
@@ -34,3 +35,14 @@ jobs:
       run: pipenv run lint
     - name: 📋 Test with pytest
       run: pipenv run test
+    - name: 📦 Create Commit
+      if: github.actor != GrammarNazi[bot]@noreply.github.com && github.event_name==push
+      run: |
+        git config --local user.email "GrammarNazi[bot]@noreply.github.com"
+        git config --local user.name "GrammarNazi[bot]"
+        git commit -m "chore: update antlr grammar" -a
+    - name: 📤 Push changes
+      if: github.event_name==push
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
