--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -36,13 +36,13 @@ jobs:
     - name: 📋 Test with pytest
       run: pipenv run test
     - name: 📦 Create Commit
-      if: github.actor != GrammarNazi[bot]@noreply.github.com && github.event_name==push
+      if: github.actor != "GrammarNazi[bot]@noreply.github.com" && github.event_name=="push"
       run: |
         git config --local user.email "GrammarNazi[bot]@noreply.github.com"
         git config --local user.name "GrammarNazi[bot]"
         git commit -m "chore: update antlr grammar" -a
     - name: 📤 Push changes
-      if: github.event_name==push
+      if: github.event_name=="push"
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
