--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -36,7 +36,7 @@ jobs:
     - name: 📋 Test with pytest
       run: pipenv run test
     - name: 📦 Create Commit
-      if: github.actor != "Grammar[bot]" && github.event_name=="push"
+      if: (! contains(github.actor,"Grammar[bot]")) && github.event_name=="push"
       run: |
         git config --local user.email "Grammar[bot]@noreply.github.com"
         git config --local user.name "Grammar[bot]"
