--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -40,6 +40,7 @@ jobs:
       run: |
         git config --local user.email "Grammar[bot]@noreply.github.com"
         git config --local user.name "Grammar[bot]"
+        git status
         git commit -m "chore: update antlr grammar" -a
     - name: 📤 Push changes
       if: github.event_name=='push'
