--- a/Pipfile
+++ b/Pipfile
@@ -17,9 +17,12 @@ openpyxl = "===2.5.2"
 six = "==1.14.0"
 traceback2 = "==1.4.0"
 et_xmlfile = "==1.0.1"
+pyglet = "*"
+pip = "*"
+setuptools = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6.3"
 
 [scripts]
 antlr = "./setup.py antlr"
