--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ openpyxl = "===2.5.2"
 six = "==1.14.0"
 traceback2 = "==1.4.0"
 et_xmlfile = "==1.0.1"
-pyglet = "*"
+pyglet = "==1.5.5"
 pip = "*"
 setuptools = "*"
 
