feat: added a subpar rendering based on pygame backend - hopefully more compatible

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ packaging==20.3
 pep517==0.8.2
 pkg-resources==0.0.0
 progress==1.5
+pygame==1.9.6
 pyglet==1.5.5
 pyparsing==2.4.6
 pytoml==0.1.21
